Set up left column

--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
   <title>Sign-up Form</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div>ODIN</div>
+  <div class="row">
+    <div class="column">
+      <div>
+        <img src="img/odin-lined.png" alt="">
+        <p>ODIN</p>
+      </div>
+      <img src="img/halie-west-25xggax4bSA-unsplash.jpg" alt="">
+    </div>
+    <div class="column">
+      <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</p>
+      <p>You know you want to.</p>
+      <div class="form_container">
+        
+      </div>
+      <p>Already have an account? <a href="">Log in</a></p>
+    </div>
+  </div>
 </body>
 </html>
