Set up right column

--- a/index.html
+++ b/index.html
@@ -18,12 +18,50 @@
       <img src="img/halie-west-25xggax4bSA-unsplash.jpg" alt="">
     </div>
     <div class="column">
-      <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</p>
-      <p>You know you want to.</p>
-      <div class="form_container">
-        
+      <div class="container">
+        <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
+        <p>Sign up now to get started.</p>
+        <p>You know you want to.</p>
+        <div class="form_container">
+          <fieldset>
+            <label for="firstName">
+              FIRST NAME
+              <input type="text" id="firstName">
+            </label>
+
+            <label for="lastName">
+              LAST NAME
+              <input type="text" id="lastName">
+            </label>
+          </fieldset>
+
+          <fieldset>
+            <label for="email">
+              EMAIL
+              <input type="email" id="email">
+            </label>
+
+            <label for="phoneNumber">
+              PHONE NUMBER
+              <input type="tel" id="phoneNumber">
+            </label>
+          </fieldset>
+
+          <fieldset>
+            <label for="password">
+              PASSWORD
+              <input type="password" id="password">
+            </label>
+
+            <label for="passwordConfirm">
+              CONFIRM PASSWORD
+              <input type="password" id="passwordConfirm">
+            </label>
+          </fieldset>
+        </div>
+        <input type="submit" value="Create Account">
+        <p>Already have an account? <a href="">Log in</a></p>
       </div>
-      <p>Already have an account? <a href="">Log in</a></p>
     </div>
   </div>
 </body>
